[gd_scene load_steps=19 format=3 uid="uid://c754lbfx0yrpu"]

[ext_resource type="Script" path="res://scenes/main.gd" id="1_6th85"]
[ext_resource type="Texture2D" uid="uid://c83gdpjarkbf0" path="res://sprites/logo.png" id="2_wri5c"]
[ext_resource type="PackedScene" uid="uid://bfma08bavkmdm" path="res://scenes/level.tscn" id="3_bprjs"]
[ext_resource type="Texture2D" uid="uid://bf7vln4ryf1cw" path="res://sprites/board.png" id="3_tm6bs"]
[ext_resource type="Texture2D" uid="uid://dr264d4ayke5e" path="res://sprites/score.png" id="4_6uknk"]
[ext_resource type="PackedScene" uid="uid://cwi2sk6qyu85" path="res://scenes/dude.tscn" id="4_sc7tv"]
[ext_resource type="Texture2D" uid="uid://d3h88hip7jfxw" path="res://sprites/game-over.png" id="6_epck0"]
[ext_resource type="Script" path="res://scenes/Lives.gd" id="6_n34hd"]
[ext_resource type="Texture2D" uid="uid://blcdpdt34eqli" path="res://sprites/live.png" id="7_3iohd"]
[ext_resource type="Script" path="res://scenes/GameOver.gd" id="7_7175p"]
[ext_resource type="Texture2D" uid="uid://dl7fsvgtatevi" path="res://sprites/pause.png" id="10_i8ilp"]
[ext_resource type="Theme" uid="uid://bv4aqck3py8f1" path="res://menu_theme.tres" id="12_yrjwq"]

[sub_resource type="LabelSettings" id="LabelSettings_huecg"]
font_size = 12
font_color = Color(0, 1, 1, 0.513726)

[sub_resource type="CanvasTexture" id="CanvasTexture_t7s4a"]

[sub_resource type="LabelSettings" id="LabelSettings_5iyr2"]
font_size = 50
shadow_size = 5
shadow_color = Color(0, 0, 0, 1)
shadow_offset = Vector2(5, 5)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_7f3l2"]
bg_color = Color(1, 0, 1, 1)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_80ufm"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_62m5u"]
bg_color = Color(0, 1, 1, 0.780392)

[node name="Main" type="Node2D"]
texture_filter = 1
script = ExtResource("1_6th85")
metadata/_edit_vertical_guides_ = [956.0]
metadata/_edit_horizontal_guides_ = [458.0, 430.0, 579.0]

[node name="Background" type="ColorRect" parent="."]
custom_minimum_size = Vector2(1152, 720)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 1152.0
offset_bottom = 720.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
mouse_filter = 2
color = Color(0, 0, 0, 1)

[node name="Version" type="Label" parent="."]
offset_left = 1049.0
offset_right = 1148.0
offset_bottom = 26.0
text = "v.0.2.0-alpha"
label_settings = SubResource("LabelSettings_huecg")
horizontal_alignment = 2

[node name="Level" parent="." instance=ExtResource("3_bprjs")]

[node name="LogoBg" type="Sprite2D" parent="."]
self_modulate = Color(0, 1, 1, 1)
position = Vector2(956, 201)
texture = SubResource("CanvasTexture_t7s4a")
region_enabled = true
region_rect = Rect2(0, 0, 358, 352)

[node name="Logo" type="Sprite2D" parent="."]
texture_filter = 1
position = Vector2(948, 192)
texture = ExtResource("2_wri5c")

[node name="Dude" parent="." instance=ExtResource("4_sc7tv")]
position = Vector2(814, 387)

[node name="Board" type="Node2D" parent="."]
visible = false
position = Vector2(748, 384)

[node name="Sprite2D" type="Sprite2D" parent="Board"]
position = Vector2(202, 168)
texture = ExtResource("3_tm6bs")

[node name="ScoreLabel" type="Label" parent="Board"]
offset_left = 197.5
offset_top = 92.0
offset_right = 371.5
offset_bottom = 164.0
text = "000000"
label_settings = SubResource("LabelSettings_5iyr2")

[node name="ScoreSprite" type="Sprite2D" parent="Board"]
position = Vector2(108.5, 131)
texture = ExtResource("4_6uknk")

[node name="FProgressBar" type="ProgressBar" parent="Board"]
visible = false
custom_minimum_size = Vector2(30, 91)
offset_left = 43.0
offset_top = 219.0
offset_right = 73.0
offset_bottom = 310.0
auto_translate = false
localize_numeral_system = false
theme_override_styles/fill = SubResource("StyleBoxFlat_7f3l2")
max_value = 15.0
value = 15.0
fill_mode = 3
show_percentage = false

[node name="MProgressBar" type="ProgressBar" parent="Board"]
visible = false
custom_minimum_size = Vector2(30, 91)
offset_left = 331.0
offset_top = 219.0
offset_right = 361.0
offset_bottom = 310.0
auto_translate = false
localize_numeral_system = false
theme_override_styles/fill = SubResource("StyleBoxFlat_7f3l2")
max_value = 30.0
value = 30.0
fill_mode = 3
show_percentage = false

[node name="Lives" type="Node2D" parent="Board"]
position = Vector2(108, 217)
script = ExtResource("6_n34hd")

[node name="Live" type="Sprite2D" parent="Board/Lives"]
visible = false
position = Vector2(37, 16)
texture = ExtResource("7_3iohd")

[node name="GameOver" type="Sprite2D" parent="."]
position = Vector2(376, -41)
texture = ExtResource("6_epck0")
script = ExtResource("7_7175p")

[node name="Pause" type="Sprite2D" parent="."]
visible = false
position = Vector2(369, 632)
texture = ExtResource("10_i8ilp")

[node name="PlayButton" type="TextureButton" parent="Pause"]
offset_left = 45.0
offset_top = -71.0
offset_right = 198.0
offset_bottom = 6.0
ignore_texture_size = true

[node name="QuitButton" type="TextureButton" parent="Pause"]
offset_left = 45.0
offset_top = 8.0
offset_right = 198.0
offset_bottom = 85.0
ignore_texture_size = true

[node name="Menu" type="Node2D" parent="."]

[node name="Line1" type="ProgressBar" parent="Menu"]
offset_top = 100.0
offset_right = 720.0
offset_bottom = 104.0
mouse_filter = 2
theme_override_styles/background = SubResource("StyleBoxEmpty_80ufm")
theme_override_styles/fill = SubResource("StyleBoxFlat_62m5u")
show_percentage = false

[node name="NewGameButton" type="Button" parent="Menu"]
offset_left = 246.0
offset_top = 118.0
offset_right = 502.0
offset_bottom = 168.0
theme = ExtResource("12_yrjwq")
text = "New Game"

[node name="Line2" type="ProgressBar" parent="Menu"]
offset_top = 200.0
offset_right = 720.0
offset_bottom = 204.0
mouse_filter = 2
theme_override_styles/background = SubResource("StyleBoxEmpty_80ufm")
theme_override_styles/fill = SubResource("StyleBoxFlat_62m5u")
show_percentage = false

[node name="ContinueButton" type="Button" parent="Menu"]
offset_left = 246.0
offset_top = 217.0
offset_right = 502.0
offset_bottom = 267.0
theme = ExtResource("12_yrjwq")
disabled = true
text = "Continue"

[node name="Line3" type="ProgressBar" parent="Menu"]
offset_top = 300.0
offset_right = 720.0
offset_bottom = 304.0
mouse_filter = 2
theme_override_styles/background = SubResource("StyleBoxEmpty_80ufm")
theme_override_styles/fill = SubResource("StyleBoxFlat_62m5u")
show_percentage = false

[node name="ScoreButton" type="Button" parent="Menu"]
offset_left = 246.0
offset_top = 316.0
offset_right = 502.0
offset_bottom = 366.0
theme = ExtResource("12_yrjwq")
disabled = true
text = "Score Board"

[node name="Line4" type="ProgressBar" parent="Menu"]
offset_top = 400.0
offset_right = 720.0
offset_bottom = 404.0
mouse_filter = 2
theme_override_styles/background = SubResource("StyleBoxEmpty_80ufm")
theme_override_styles/fill = SubResource("StyleBoxFlat_62m5u")
show_percentage = false

[connection signal="f_start" from="Level" to="." method="_on_level_f_start"]
[connection signal="level_up" from="Level" to="." method="_on_level_up"]
[connection signal="live_add" from="Level" to="." method="_on_live_add"]
[connection signal="live_remove" from="Level" to="." method="_on_live_remove"]
[connection signal="m_start" from="Level" to="." method="_on_level_m_start"]
[connection signal="reset" from="Level" to="." method="_on_level_reset"]
[connection signal="round_fail" from="Level" to="." method="_on_level_round_fail"]
[connection signal="score" from="Level" to="." method="_on_level_score"]
[connection signal="pressed" from="Pause/PlayButton" to="." method="_on_play_button_pressed"]
[connection signal="pressed" from="Pause/QuitButton" to="." method="_on_quit_button_pressed"]
[connection signal="pressed" from="Menu/NewGameButton" to="." method="_on_new_game"]
